--- a/src/web/index.ejs
+++ b/src/web/index.ejs
@@ -1,8 +1,7 @@
 <html>
 <head>
     <meta charset="UTF-8">
-    <title>Hello World!</title>
-    <meta http-equiv="Content-Security-Policy" content="script-src 'self' 'unsafe-inline';" />
+    <title>Estimate calc</title>
 </head>
 <body style="background: white;">
     <!-- <script src="index.js"></script> -->
