--- a/src/web/index.ejs
+++ b/src/web/index.ejs
@@ -2,9 +2,24 @@
 <head>
     <meta charset="UTF-8">
     <title>Estimate calc</title>
+    <style>
+        * {
+            margin:0;
+            padding:0;
+        }
+        .app-container {
+            display:flex;
+            flex-direction: row;
+            align-items: center;
+            justify-content: center;
+            height:100%;
+        }
+    </style>
 </head>
 <body style="background: white;">
     <!-- <script src="index.js"></script> -->
-    <div id="app"></div>
+    <div class="app-container">
+        <div id="app"></div>
+    </div>
 </body>
 </html>
