--- a/src/web/index.ejs
+++ b/src/web/index.ejs
@@ -14,9 +14,22 @@
             justify-content: center;
             height:100%;
         }
+        /* Dark mode */
+    
+        body {
+            background-color: rgb(39, 39, 39);
+            color: white;
+        }
+    
+        input, select, textarea {
+            background-color:rgb(58 58 58);
+            color:white;
+            border: 1px solid #8e8e8d;
+            padding: 1px;
+        }
     </style>
 </head>
-<body style="background: white;">
+<body>
     <!-- <script src="index.js"></script> -->
     <div class="app-container">
         <div id="app"></div>
