Various updates to html

--- a/src/web/index.ejs
+++ b/src/web/index.ejs
@@ -1,6 +1,7 @@
-<html>
+<html lang="en">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Estimate calc</title>
     <style>
         * {
@@ -49,7 +50,6 @@
     </style>
 </head>
 <body>
-    <!-- <script src="index.js"></script> -->
     <div class="app-container">
         <div id="app"></div>
     </div>
