--- a/src/web/index.ejs
+++ b/src/web/index.ejs
@@ -5,6 +5,12 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Estimate calc</title>
     <style>
+        html {
+            height: 100%;
+        }
+        body {
+            height: 100%;
+        }
         * {
             margin:0;
             padding:0;
