--- a/src/web/index.ejs
+++ b/src/web/index.ejs
@@ -3,6 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
+    <meta name="theme-color" content="#272727">
     <title>Estimate calc</title>
     <style>
         html {
@@ -30,12 +31,12 @@
         /* Dark mode */
         @media (prefers-color-scheme: dark) {
             body {
-                background-color: rgb(39, 39, 39);
+                background-color: #272727;
                 color: white;
             }
 
             input, select, textarea {
-                background-color:rgb(58, 58, 58);
+                background-color:#3a3a3a;
                 color:white;
                 border: 1px solid #8e8e8d;
             }
@@ -45,12 +46,12 @@
         @media (prefers-color-scheme: light) {
             body {
                 background-color: white;
-                color: rgb(39, 39, 39);
+                color: #272727;
             }
 
             input, select, textarea {
-                background-color:rgb(197, 197, 197);
-                color:rgb(39, 39, 39);
+                background-color:#c5c5c5;
+                color:#272727;
                 border: 1px solid #8e8e8d;
             }
         }
